deployment/deployments/enroll-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enroll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enroll
  template:
    metadata:
      labels:
        app: enroll
    spec:
      containers:
        - name: enroll
          image: ampersandtarski/enroll:latest
          ports:
            - containerPort: 80
