deployment/deployments/testpod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student123
  namespace: rap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student123
  template:
    metadata:
      labels:
        app: student123
    spec:
      containers:
        - name: student123
          image: sheriffbalunywa/rap4-student-proto:2.1
          ports:
            - containerPort: 80

          command: ["bash", "/run-student-prototype2.sh"]
          args: ["Q09OVEVYVCBFbnJvbGxtZW50IElOIEVOR0xJU0gKUFVSUE9TRSBDT05URVhUIEVucm9sbG1lbnQKeysgQSBjb21wbGV0ZSBjb3Vyc2UgY29uc2lzdHMgb2Ygc2V2ZXJhbCBtb2R1bGVzLgpTdHVkZW50cyBvZiBhIGNvdXJzZSBjYW4gZW5yb2xsIGZvciBhbnkgbW9kdWxlIHRoYXQgaXMgcGFydCBvZiB0aGUgY291cnNlLgorfQoKUEFUVEVSTiBDb3Vyc2VzCi0tIFRoZSBjb25jZXB0cwpDT05DRVBUIFN0dWRlbnQgIlNvbWVvbmUgd2hvIHdhbnRzIHRvIHN0dWR5IGF0IHRoaXMgaW5zdGl0dXRlIgpQVVJQT1NFIENPTkNFUFQgU3R1ZGVudCAKeytXZSBoYXZlIHRvIGtub3cgd2hhdCBwZXJzb24gc3R1ZGllcyBhdCB0aGlzIGluc3RpdHV0ZS [...]
 
        #dnsPolicy: ClusterFirst
        #restartPolicy: Never
---
# ingress rule for rap
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rap4user-ingress
  namespace: rap
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /student123(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: student123
                port:
                  number: 80
---
# rap4 user service
apiVersion: v1
kind: Service
metadata:
  name: student123
  namespace: rap
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: student123
---
